fixed some issues with the buttons

--- a/starter/index.html
+++ b/starter/index.html
@@ -33,6 +33,9 @@
           <li><button type="button" class="btn questionButton" id="three"></button></li>
           <li><button type="button" class="btn questionButton" id="four"></button></li>
       </ul>
+
+      <!--Response after user selects answer -->
+      <div id="answerResponse"></div>
       </div>
 
       <div id="end-screen" class="hide">
