--- a/starter/highscores.html
+++ b/starter/highscores.html
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-    <div class="wrapper">
+    <div class="wrapper" id = "highScoreButtons">
       <h1>Highscores</h1>
       <ol id="highscores"></ol>
 
@@ -18,6 +18,6 @@
       <button id="clear">Clear Highscores</button>
     </div>
 
-    <script src="./assets/js/script.js"></script>
+    <script src="../starter/assets/js/script.js"></script>
   </body>
 </html>
